# offline-pos

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs
src/controller/: login_controller.rs
src/logic/: database.rs  mod.rs  updater.rs
ui/: Main.slint  store.slint
ui/screens/: dashboard.slint  loginScreen.slint
