[package]
name = "offline-pos"
version = "0.1.2"
edition = "2024"
description = "Advanced Aura POS System"
repository = "https://github.com/Cally6546/offline-pos"

[dependencies]
self_update = "0.42.0"
slint = "1.15.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[build-dependencies]
slint-build = "1.15"

[package.metadata.bundle]
name = "Aura POS"
identifier = "com.calson.pos"
icon = ["icons/32x32.png", "icons/128x128.png"]
category = "Office"
